--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -24,7 +24,9 @@ spec:
                 "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_worldmap_server.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_geohash_client.sql",
-                "--type=gauge", "--query=/queries/bq_ndt_server.sql" ]
+                "--type=gauge", "--query=/queries/bq_ndt_server.sql",
+                "--type=gauge", "--query=/queries/bq_mlabns_sixhour_requests.sql",
+              ]
         ports:
         - containerPort: 9050
         volumeMounts:
