--- a/.travis.yml
+++ b/.travis.yml
@@ -179,4 +179,4 @@ before_install:
   keys/service-accounts.tar.enc /tmp/service-accounts.tar /tmp
 - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
 - sudo apt-get -qq update
-- sudo apt-get install -y apache2-utils
+- sudo apt-get install -y apache2-utils jq
