Adjusts a few comments for clarity.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1010,7 +1010,8 @@ groups:
         /cache/data/*`.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
 
-# Etcd alerts mostly gleaned from:
+# PlatformCluster Etcd alerts.
+# Mostly gleaned from:
 # https://github.com/etcd-io/etcd/blob/master/Documentation/op-guide/etcd3_alert.rules.yml
 
   - alert: PlatformCluster_EtcdHasNoLeader
@@ -1103,3 +1104,4 @@ groups:
         bottleneck.
       dashboard: https://grafana.mlab-staging.measurementlab.net/d/K8-zAIuik/k8s-master-cluster
 
+# Platform Cluster API server alerts.
