Fixes a syntax error in recording rule, moving a closing curly brace to the proper location.

--- a/config/federation/prometheus/rules.yml
+++ b/config/federation/prometheus/rules.yml
@@ -177,8 +177,8 @@ groups:
       sum by (container_label_io_kubernetes_container_name) (
         rate (container_cpu_usage_seconds_total{
           container_label_io_kubernetes_container_name != "POD",
-          container_label_io_kubernetes_container_name != ""},
-          image != ""
+          container_label_io_kubernetes_container_name != "",
+          image != ""}
         [5m])
       )
   - record: container_name:container_memory_working_set_bytes:sum_rate5m
@@ -186,7 +186,7 @@ groups:
       sum by (container_label_io_kubernetes_container_name) (
         rate (container_memory_working_set_bytes{
           container_label_io_kubernetes_container_name != "POD",
-          container_label_io_kubernetes_container_name != ""},
-          image != ""
+          container_label_io_kubernetes_container_name != "",
+          image != ""}
         [5m])
       )
