--- a/k8s/prometheus-federation/deployments/reboot-api.yml
+++ b/k8s/prometheus-federation/deployments/reboot-api.yml
@@ -18,6 +18,9 @@ spec:
         args:
           - "-datastore.project={{GCLOUD_PROJECT}}"
           - "-reboot.key=/var/secrets/reboot-api-ssh.key"
+          - "-auth.username={{REBOOTAPI_USER}}"
+          - "-auth.password={{REBOOTAPI_PASS}}"
+          - "-tls.host={{REBOOTAPI_TLS_HOST}}"
         env:
           - name: GOOGLE_APPLICATION_CREDENTIALS
             value: /var/secrets/reboot-api-credentials.json
