--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
 # Use promtool to check current alerts and rules. This is only a syntax check.
 - promtool check rules config/federation/prometheus/alerts.yml
 - promtool check rules config/federation/prometheus/rules.yml
+- $TRAVIS_BUILD_DIR/travis/install_gcloud.sh
 
 # TODO(soltesz): support check-config.
 # promtool check-config config/federation/prometheus/prometheus.yml
@@ -44,6 +45,16 @@ deploy:
   script:
     "$TRAVIS_BUILD_DIR/kubectl.sh mlab-sandbox prometheus-federation ./apply-global-prometheus.sh
     && $TRAVIS_BUILD_DIR/kubectl.sh mlab-sandbox prometheus-federation ./apply-grafana-dashboards.sh"
+  skip_cleanup: true
+  on:
+    repo: m-lab/prometheus-support
+    branch: sandbox-*
+    condition: "$TRAVIS_EVENT_TYPE == push"
+
+- provider: script
+  script:
+    "$TRAVIS_BUILD_DIR/generate-prometheus-targets.sh &&
+    $TRAVIS_BUILD_DIR/deploy-prometheus-targets.sh mlab-sandbox"
   skip_cleanup: true
   on:
     repo: m-lab/prometheus-support
@@ -98,6 +109,16 @@ deploy:
     condition: $TRAVIS_BRANCH == master && $TRAVIS_EVENT_TYPE == push
 
 - provider: script
+  script:
+    $TRAVIS_BUILD_DIR/generate-prometheus-targets.sh
+    && $TRAVIS_BUILD_DIR/deploy-prometheus-targets.sh mlab-staging
+  skip_cleanup: true
+  on:
+    repo: m-lab/prometheus-support
+    all_branches: true
+    condition: $TRAVIS_BRANCH == master && $TRAVIS_EVENT_TYPE == push
+
+- provider: script
   script: $TRAVIS_BUILD_DIR/kubectl.sh mlab-staging data-processing-cluster ./apply-cluster.sh
   skip_cleanup: true
   on:
@@ -135,6 +156,16 @@ deploy:
   script:
     $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti prometheus-federation ./apply-global-prometheus.sh
     && $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti prometheus-federation ./apply-grafana-dashboards.sh
+  skip_cleanup: true
+  on:
+    repo: m-lab/prometheus-support
+    all_branches: true
+    condition: $TRAVIS_TAG == production* || $TRAVIS_TAG =~ ^v[0-9]+\.[0-9]+\.[0-9]+
+
+- provider: script
+  script:
+    $TRAVIS_BUILD_DIR/generate-prometheus-targets.sh
+    && $TRAVIS_BUILD_DIR/deploy-prometheus-targets.sh mlab-oti
   skip_cleanup: true
   on:
     repo: m-lab/prometheus-support
