--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -472,8 +472,13 @@ groups:
         or absent(probe_success{service="ndt_raw_ipv6"})
         or absent(probe_success{service="ndt_ssl"})
         or absent(probe_success{service="ndt_ssl_ipv6"})
-        or absent(vdlimit_used{experiment="ndt.iupui"})
-        or absent(vdlimit_total{experiment="ndt.iupui"})
+        or (
+          (
+            absent(vdlimit_used{experiment="ndt.iupui"})
+              or absent(vdlimit_total{experiment="ndt.iupui"})
+          )
+          and absent(node_filesystem_size_bytes{cluster="platform-cluster"})
+        )
     for: 30m
     labels:
       repo: ops-tracker
@@ -525,12 +530,15 @@ groups:
         status in Prometheus[1].
         [1]: https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets
 
-# Some number of nodes don't have a lame-duck status.
+# Some number of nodes don't have a lame-duck status. Adding the
+# node_filesystem_size_bytes metric as a criteria will exclude platform cluster
+# nodes from this legacy alert, as that metric only exists on platform cluster nodes.
   - alert: LameDuckMetricMissingForNode
     expr: |
       up{service="nodeexporter"} == 1
         unless on(machine) lame_duck_node
         unless on(machine) gmx_machine_maintenance == 1
+        unless on(machine) node_filesystem_size_bytes{cluster="platform-cluster"}
     for: 30m
     labels:
       repo: ops-tracker
@@ -543,12 +551,15 @@ groups:
 
 # vdlimit_used and/or vdlimit_free metrics are completely missing for a node.
 # There are other vdlimit_* metrics, but we care especially about these because
-# mlab-ns uses them to query Prometheus for node status.
+# mlab-ns uses them to query Prometheus for node status. Adding the
+# node_filesystem_size_bytes metric as a criteria will exclude platform cluster
+# nodes from this legacy alert, as that metric only exists on platform cluster nodes.
   - alert: VdlimitMetricsMissingForNode
     expr: |
       up{service="nodeexporter"} == 1
         unless on(machine) (vdlimit_used and vdlimit_total)
         unless on(machine) gmx_machine_maintenance == 1
+        unless on(machine) node_filesystem_size_bytes{cluster="platform-cluster"}
     for: 30m
     labels:
       repo: ops-tracker
@@ -575,11 +586,14 @@ groups:
         and slice. If so, then check or other sources of disk usage, like
         /var/logs and /home/<vserver>.
 
-# A collectd-mlab service has a problem and is down.
+# A collectd-mlab service has a problem and is down. Adding the
+# node_filesystem_size_bytes metric as a criteria will exclude platform cluster
+# nodes from this legacy alert, as that metric only exists on platform cluster nodes.
   - alert: CoreServices_CollectdMlabDown
     expr: |
       collectd_mlab_success == 0
         unless on(machine) gmx_machine_maintenance == 1
+        unless on(machine) node_filesystem_size_bytes{cluster="platform-cluster"}
     for: 10m
     labels:
       repo: ops-tracker
@@ -592,12 +606,15 @@ groups:
         and run the check script manually to see what the specific error is
         (/usr/lib/nagios/plugins/check_collectd_mlab.py).
 
-# A collectd-mlab service metric is missing on some node.
+# A collectd-mlab service metric is missing on some node. Adding the
+# node_filesystem_size_bytes metric as a criteria will exclude platform cluster
+# nodes from this legacy alert, as that metric only exists on platform cluster nodes.
   - alert: CoreServices_CollectdMlabMissing
     expr: |
       up{service="nodeexporter"} == 1
         unless on(machine) collectd_mlab_success
         unless on(machine) gmx_machine_maintenance == 1
+        unless on(machine) node_filesystem_size_bytes{cluster="platform-cluster"}
     for: 10m
     labels:
       repo: ops-tracker
